--- a/src/components/MaiComponent/MainComponent.module.css
+++ b/src/components/MaiComponent/MainComponent.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 50px 0;
 }
 .wrapper {
   position: relative;
@@ -12,6 +13,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
+  margin: 50px 80px;
 }
 .background {
   position: absolute;
